--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <h2>OFFICIAL WEBSITES</h2>
         <div class="portfolio-items">
             <div class="portfolio-item">
-                <img src="https://i.imgur.com/lBG2veM_d.webp?maxwidth=128&shape=square" alt="Project 1">
+                <img src="https://i.postimg.cc/Gmww9jJd/Screenshot-2024-11-21-155910.png" alt="Project 1">
                 <h3>WEBSITE 1</h3>
                 <p>SKULL-CHUNKS.</p>
                 <a href="https://aradhy9800.github.io/SKULL-CHUNKS/" class="project-btn">View Project</a>
