--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <a href="https://aradhy9800.github.io/SKULL-CHUNKS/" class="project-btn">View Project</a>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.imgur.com/RG7qzVQ_d.webp?maxwidth=128&shape=square" alt="Project 2">
+                <img src="https://i.postimg.cc/QNyfdxk3/Screenshot-2024-11-21-154339.png" alt="Project 2">
                 <h3>WEBSITE 2</h3>
                 <p>SKULL-CHUNKS-WEB-SERVICES.</p>
                 <a href="https://aradhy9800.github.io/SKULL-CHUNKS-WEBSITE-SERVICES/" class="project-btn">View Project</a>
