--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <a href="https://aradhy9800.github.io/SKULL-CHUNKS-WEBSITE-SERVICES/" class="project-btn">View Project</a>
             </div>
             <div class="portfolio-item">
-                <img src="https://i.imgur.com/MZQxG1E.png" alt="Project 3">
+                <img src="https://i.postimg.cc/0QctkjB3/Screenshot-2024-11-21-161819.png" alt="Project 3">
                 <h3>WEBSITE 3</h3>
                 <p>CREATORs-PORTFOLIO.</p>
                 <a href="https://aradhy9800.github.io/CREATORs-PORTFOLIO/" class="project-btn">View Project</a>
