--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <a href="https://aradhy9800.github.io/CREATORs-PORTFOLIO/" class="project-btn">View Project</a>
             </div>    
           <div class="portfolio-item">
-                <img src="https://i.imgur.com/R7WjQpT.png" alt="Project 3">
+                <img src="https://i.postimg.cc/fk48BBBK/Screenshot-2024-11-21-162051.png" alt="Project 3">
                 <h3>WEBSITE 4</h3>
                 <p>OTHER-WEBSITE</p>
                 <a href="#" class="project-btn">View Project</a>
